--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,9 +1,35 @@
+# base
+set-window-option -g utf8 on
+set -g status-utf8 on
+bind C-b send-prefix
+
+# key binds
+set-window-option -g mode-keys vi
+set-window-option -g xterm-keys on
+unbind C-a
+unbind C-e
+
+# Vi keybind copy
+# PREFIX + v copy
+# PREFIX + p paste
+bind-key v copy-mode \; display "Copy mode"
+bind-key -t vi-copy C-v   rectangle-toggle
+bind-key -t vi-copy V     select-line
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -t vi-copy y     copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -t vi-copy C-a   start-of-line
+bind-key -t vi-copy C-e   end-of-line
+bind-key p paste-buffer
+
 # mouse maniplate enable
-setw -g mode-mouse on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-set -g mouse-select-window on
+# setw -g mode-mouse on
+# set -g mouse-select-pane on
+# set -g mouse-resize-pane on
+# set -g mouse-select-window on
+set -g mouse-utf8 on
+set -g mouse on
+bind -n WheelUpPane   select-pane -t=\; copy-mode -e \; send-keys -M
+bind -n WheelDownPane select-pane -t=\;                 send-keys -M
 
 # for vi
 set -s escape-time 0
-
