--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,6 @@
 # base
-set-window-option -g utf8 on
-set -g status-utf8 on
+# set-window-option -g utf8 on
+# set -g status-utf8 on
 bind C-b send-prefix
 
 # key binds
@@ -26,7 +26,7 @@ bind-key p paste-buffer
 # set -g mouse-select-pane on
 # set -g mouse-resize-pane on
 # set -g mouse-select-window on
-set -g mouse-utf8 on
+# set -g mouse-utf8 on
 set -g mouse on
 bind -n WheelUpPane   select-pane -t=\; copy-mode -e \; send-keys -M
 bind -n WheelDownPane select-pane -t=\;                 send-keys -M
