--- a/.tmux.conf
+++ b/.tmux.conf
@@ -33,3 +33,6 @@ bind -n WheelDownPane select-pane -t=\;                 send-keys -M
 
 # for vi
 set -s escape-time 0
+
+# 24 bit collor (true color)
+set -ga terminal-overrides ",xterm-256color:Tc"
